try to fix css overwrriten

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
 
 <body class="mat-typography">
 
-  <payment-sdk showbutton='true'></payment-sdk>
+  <payment-sdk showbutton='true' 
+  amount='400' 
+  action='Donate Now'
+  ></payment-sdk>
 </body>
 
 </html>
