enable disable momo

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,11 @@
 </style>
 <body class="mat-typography" style="margin:200px">
 
-  <payment-sdk  showbutton='false' modal="md" 
-  amount='400' 
+
+  <payment-sdk  
+  enablemomo='true'
+  showbutton='false' modal="md" 
+  amount='300' 
   action='Donate' 
   ></payment-sdk>
 </body>
